# python-ai-sdk

./: .gitignore  BLOG_POST.md  CHANGELOG.md  MANIFEST.in  README.md  SENDING_TO_LAST9.md  VERIFICATION_STATUS.md  last9_genai_attributes.py  pyproject.toml  requirements.txt  setup.py  test_fastapi_with_last9.py
.github/workflows/: ci.yml  publish.yml
examples/: agent_tracking.py  anthropic_integration.py  basic_usage.py  context_tracking.py  conversation_tracking.py  decorator_tracking.py  fastapi_app.py  langchain_integration.py  openai_integration.py  send_to_last9.py  tool_integration.py
last9_genai/: __init__.py  context.py  core.py  decorators.py  install.py  log_processor.py  processor.py
tests/: __init__.py  conftest.py  test_context.py  test_core.py  test_costing.py  test_decorators.py  test_e2e.py  test_install.py  test_log_processor.py
